--- a/about-us/about-us.html
+++ b/about-us/about-us.html
@@ -1,50 +1,53 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green Vehicle Demand</title>
-    <link rel="icon" type="image/x-icon" href="../immagini/logo.png">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../incentivi/incentivi-style.css">
-    <link rel="stylesheet" href="style.css">
-    <script src="bootstrap.min.js" type="application/javascript"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Green Vehicle Demand</title>
+  <link rel="icon" type="image/x-icon" href="../immagini/logo.png">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../incentivi/incentivi-style.css">
+  <link rel="stylesheet" href="style.css">
+  <script src="bootstrap.min.js" type="application/javascript"></script>
 </head>
+
 <body>
-    <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-      <div class="container-fluid">
-        <a target="_blank" href="../index.html"><img src="../immagini/logo.png" alt="" height="45px" hspace="10"></a>>
-          <a class="navbar-brand" href="#">Green Vehicle Demand</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-              aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                  <a class="nav-link" href="../auto/auto.php">Le nostre auto</a>
-                  <a class="nav-link" href="../incentivi/incentivi.html">Incentivi</a>
-                  <a class="nav-link" href="about-us.html">Chi siamo?</a>
-              </div>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                  <div class="navbar-nav">
-                      <a class="nav-link btn border-secondary" style="border-radius: 10px;"
-                          href="../personale/welcome.php">Area personale</a>
-                  </div>
-              </div>
+  <!--Navbar-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <div class="container-fluid">
+      <a target="_blank" href="../index.html"><img src="../immagini/logo.png" alt="" height="45px" hspace="10"></a>
+      <a class="navbar-brand" href="../index.html">Green Vehicle Demand</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+          <a class="nav-link" href="../auto/auto.php">Le nostre auto</a>
+          <a class="nav-link" href="../incentivi/incentivi.html">Incentivi</a>
+        </div>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link btn border-secondary" style="border-radius: 10px;" href="../personale/welcome.php">Area
+              personale</a>
           </div>
+        </div>
       </div>
-    </nav>
+    </div>
+  </nav>
   <!--Mappa e descrizione-->
   <div class="container">
     <div class="row mt-5">
       <div class="col-md-6">
         <h4>Dove siamo:</h4>
         <p>Sede in Viale dello Scalo S. Lorenzo, 82, 00159 Roma RM</p>
-          <iframe  style="height: 70vh;" src="https://map.openchargemap.io/?mode=embedded&longitude=12.5209527 &latitude=41.8964095" allow="geolocation" frameborder="0" width="100%" height="100%"></iframe>
+        <iframe style="height: 70vh;"
+          src="https://map.openchargemap.io/?mode=embedded&longitude=12.5209527 &latitude=41.8964095"
+          allow="geolocation" frameborder="0" width="100%" height="100%"></iframe>
       </div>
       <div class="col-md-6">
         <div class="row justify-content-center">
@@ -59,8 +62,10 @@
                 <h4 class="title">Studente</h4>
               </div>
               <ul class="social">
-                <li><a href="https://www.facebook.com/simone.pascucci.581" aria-hidden="true"><img src="/about-us/icons/facebook.png" alt=""></a></li>
-                <li><a href="https://www.instagram.com/simonepascuu/" aria-hidden="true"><img src="/about-us/icons/instagram.png" alt=""></a></li>
+                <li><a href="https://www.facebook.com/simone.pascucci.581" aria-hidden="true"><img
+                      src="/about-us/icons/facebook.png" alt=""></a></li>
+                <li><a href="https://www.instagram.com/simonepascuu/" aria-hidden="true"><img
+                      src="/about-us/icons/instagram.png" alt=""></a></li>
               </ul>
             </div>
           </div>
@@ -94,9 +99,12 @@
                 <h4 class="title">Studente</h4>
               </div>
               <ul class="social">
-                <li><a href="https://www.facebook.com/matteo.cutroni" aria-hidden="true"><img src="/about-us/icons/facebook.png" alt=""></a></li>
-                <li><a href="https://twitter.com/mat_cutro" aria-hidden="true"><img src="/about-us/icons/twitter.png" alt=""></a></li>
-                <li><a href="https://www.instagram.com/mat_cutro/" aria-hidden="true"><img src="/about-us/icons/instagram.png" alt=""></a></li>
+                <li><a href="https://www.facebook.com/matteo.cutroni" aria-hidden="true"><img
+                      src="/about-us/icons/facebook.png" alt=""></a></li>
+                <li><a href="https://twitter.com/mat_cutro" aria-hidden="true"><img src="/about-us/icons/twitter.png"
+                      alt=""></a></li>
+                <li><a href="https://www.instagram.com/mat_cutro/" aria-hidden="true"><img
+                      src="/about-us/icons/instagram.png" alt=""></a></li>
               </ul>
             </div>
           </div>
@@ -104,42 +112,38 @@
       </div>
     </div>
   </div>
-    <!--Footer-->
-    <div class="container mt-5 p-3">
-      <div class="row">
-          <div class="text-left text-md-start">
-              <span class="copyright">Copyright &copy; Progetto Linguaggi e tecnologie per il web 2022
-                  Pilla-Pascucci-Cutroni</span>
-          </div>
-      </div>
-      <script src="/news/app_news.js" type="application/javascript"></script>
-  </div>
-  <!-- Footer -->
-  <footer>
-    Green Vehicle Demand | Piazzale Aldo Moro 5
-    00185 - Roma, ITALIA | C.F. GVD45643298 | P.Iva 3342165789 <br>
-    <a class="trans-color-text"
+    
+    <!-- Footer -->
+    <footer>
+      Green Vehicle Demand | Piazzale Aldo Moro 5
+      00185 - Roma, ITALIA | C.F. GVD45643298 | P.Iva 3342165789 <br>
+      <a class="trans-color-text"
         href="mailto:greenvehicledemand@outlook.it?subject=Mail_dal_sito_web">greenvehicledemand@outlook.it</a> |
-    <span itemprop="telephone">+39 320 98
+      <span itemprop="telephone">+39 320 98
         74 562</span>
-    <br><a target="_blank" href="../about-us/about-us.html">About us</a> | <a target="_blank" href="../privacy.html"> privacy</a> | <a target="_blank" href="../incentivi/faq.html">
+      <br><a target="_blank" href="../about-us/about-us.html">About us</a> | <a target="_blank" href="../privacy.html">
+        privacy</a> | <a target="_blank" href="../incentivi/faq.html">
         FAQ</a>
 
-    <div class="social-cont">
+      <div class="social-cont">
         <ul class="social-list">
-            <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100081637218993"><img
-                        src="../immagini/facebook.png" title="facebook" alt="Facebook icon"></a></li>
-            <li><a target="_blank" href="https://www.instagram.com/greenvehicledemand/"><img
-                        src="../immagini/instagram.png" title="Instagram" alt="Instagram icon"></a></li>
-            <li><a target="_blank" href="https://twitter.com/DemandGreen"><img src="../immagini/twitter.png"
-                        title="twitter" alt="twitter icon"></a></li>
+          <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100081637218993"><img
+                src="../immagini/facebook.png" title="facebook" alt="Facebook icon"></a></li>
+          <li><a target="_blank" href="https://www.instagram.com/greenvehicledemand/"><img
+                src="../immagini/instagram.png" title="Instagram" alt="Instagram icon"></a></li>
+          <li><a target="_blank" href="https://twitter.com/DemandGreen"><img src="../immagini/twitter.png"
+                title="twitter" alt="twitter icon"></a></li>
         </ul>
         <div class="floatstop"></div>
-    </div>
-    <span class="copyright">
+      </div>
+      <span class="copyright">
         <a target="_blank" href="../index.html"><img width="40" src="../immagini/logo.png" title="creators"></a>
-          Copyright &copy; Progetto Linguaggi e tecnologie per il web 2022
-            Pilla-Pascucci-Cutroni</span>
-</footer>
+        Copyright &copy; Progetto Linguaggi e tecnologie per il web 2022
+        Pilla-Pascucci-Cutroni</span>
+    </footer>
+    <div>
+      <script src="/news/app_news.js" type="application/javascript"></script>
+    </div>
 </body>
+
 </html>
