--- a/incentivi/incentivi.html
+++ b/incentivi/incentivi.html
@@ -28,7 +28,6 @@
                     <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                     <a class="nav-link" href="../auto/auto.php">Le nostre auto</a>
                     <a class="nav-link" href="#">Incentivi</a>
-                    <a class="nav-link" href="../about-us/about-us.html">Chi siamo?</a>
                 </div>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
@@ -48,7 +47,7 @@
                 <div class="text-center mt-4 mb-2">
                     <p class="h1">Incentivi auto 2022</p>
                 </div>
-                <div class="data-articolo">28 Maggio 2022</div>
+                <div class="data-articolo">Aggiornato al: 28 Maggio 2022</div>
                 <article class="pb-md-4 pt-5 mb-md-4">
 
                     <p class="h3 titolo-articolo-incentivi">Al via dal 16 Maggio</p>
