--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                     <a class="nav-link" href="auto/auto.php">Le nostre auto</a>
                     <a class="nav-link" href="incentivi/incentivi.html">Incentivi</a>
-                    <a class="nav-link" href="about-us/about-us.html">Chi siamo?</a>
                 </div>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
@@ -99,7 +98,7 @@
     <!--Mappa colonnine-->
     <div class="row mt-2 me-0 justify-content-center">
         <div class="col-lg-8 mb-3 text-lg-start text-center">
-        <h3 >TROVA LA STAZIONE DI RICARICA PIU' VICINA A TE</h3> 
+            <h3>TROVA LA STAZIONE DI RICARICA PIU' VICINA A TE</h3>
         </div>
         <div class="col-lg-8 pe-0" style="height: 70vh;">
             <iframe src="https://map.openchargemap.io/?mode=embedded&longitude=12.492231 &latitude=41.890209"
@@ -121,8 +120,7 @@
                         <div class="screen-body-item">
                             <div class="app-form">
                                 <div class="app-form-group">
-                                    <input type="text" class="app-form-control" name="nome" placeholder="nome"
-                                         required>
+                                    <input type="text" class="app-form-control" name="nome" placeholder="nome" required>
                                 </div>
                                 <div class="app-form-group">
                                     <input type="email" class="app-form-control" name="email" placeholder="email"
@@ -152,7 +150,6 @@
             </div>
         </div>
     </form>
-    <hr>
     <!--Footer-->
     <footer>
         Green Vehicle Demand | Piazzale Aldo Moro 5
@@ -161,7 +158,8 @@
             href="mailto:greenvehicledemand@outlook.it?subject=Mail_dal_sito_web">greenvehicledemand@outlook.it</a> |
         <span itemprop="telephone">+39 320 98
             74 562</span>
-        <br><a target="_blank" href="about-us/about-us.html">About us</a> | <a target="_blank" href="privacy.html"> privacy</a> | <a target="_blank" href="incentivi/faq.html">
+        <br><a target="_blank" href="about-us/about-us.html">About us</a> | <a target="_blank" href="privacy.html">
+            privacy</a> | <a target="_blank" href="incentivi/faq.html">
             FAQ</a>
 
         <div class="social-cont">
@@ -177,7 +175,12 @@
         </div>
         <span class="copyright">
             <a target="_blank" href="#"><img width="40" src="immagini/logo.png" title="creators"></a>
-              Copyright &copy; Progetto Linguaggi e tecnologie per il web 2022
-                Pilla-Pascucci-Cutroni</span>
+            Copyright &copy; Progetto Linguaggi e tecnologie per il web 2022
+            Pilla-Pascucci-Cutroni</span>
     </footer>
+    <div>
+        <script src="/news/app_news.js" type="application/javascript"></script>
+    </div>
+</body>
+
 </html>
