--- a/privacy.html
+++ b/privacy.html
@@ -12,7 +12,7 @@
     <title>Termini e condizioni</title>
 </head>
 
-<>
+<body>
     <main class="container">
         <img src="immagini/logo.png" alt="" height="45px" hspace="10">
         <a class="app-title" class="navbar-brand" href="index.html">Green Vehicle Demand</a>
@@ -24,7 +24,8 @@
                     <hr>
                     <h2>1.Titolare dei dati personali</h2>
 
-                    <p>Green Vechicle Demand S.p.A. (di seguito “greenvehicledemand”) con sede legale in Piazzale Aldo Moro 5
+                    <p>Green Vechicle Demand S.p.A. (di seguito “greenvehicledemand”) con sede legale in Piazzale Aldo
+                        Moro 5
                         00185 - Roma , RM , Italy.</p>
                     <hr>
 
@@ -41,7 +42,7 @@
                     <hr>
 
                     <h2>2. Responsabile dei dati personali</h2>
-                    <p>Società Green Vechicle Demand S.p.A. con sede legale in  Piazzale Aldo Moro 5
+                    <p>Società Green Vechicle Demand S.p.A. con sede legale in Piazzale Aldo Moro 5
                         00185 - Roma , RM , Italy . In ogni
                         caso un elenco completo dei responsabili è disponibile
                         presso la sede della società Titolare dei dati. In caso di necessità, per attività legate alla
@@ -53,7 +54,8 @@
                     <hr>
 
                     <h2>3. Oggetto del trattamento</h2>
-                    <p>Il Titolare, proprietario dei siti www.greenvehicledemand.it e annunci.greenvehicledemand.it la informa ai sensi
+                    <p>Il Titolare, proprietario dei siti www.greenvehicledemand.it e annunci.greenvehicledemand.it la
+                        informa ai sensi
                         dell’art. 13 del D.lgs 196/2003 (in seguito “Codice Privacy”) e dell’art. 13
                         GDPR che tratta i dati personali da lei eventualmente conferiti per le finalità che di volta in
                         volta le verranno comunicate e per le quali sarà sempre richiesto il suo
@@ -63,7 +65,8 @@
                     <hr>
 
                     <h2>4. Modalità del trattamento</h2>
-                    <p>I suoi dati potranno essere trattati in modalità cartacea e telematica. I dati di cui greenvehicledemand è
+                    <p>I suoi dati potranno essere trattati in modalità cartacea e telematica. I dati di cui
+                        greenvehicledemand è
                         titolare/responsabile sono soltanto quelli necessari alla prima fase di
                         registrazione indicati sub §3. Per iscriversi ai singoli eventi/servizi da Lei di volta in volta
                         scelti, il sito potrà chiedere eventuali dati comuni (nome, cognome,
@@ -124,9 +127,10 @@
                     <hr>
 
                     <h2>6. Luogo del trattamento dei dati</h2>
-                    <p>I server della società suddetta sono collocati presso le seguenti società: SME S.r.l. Italia - Via
+                    <p>I server della società suddetta sono collocati presso le seguenti società: SME S.r.l. Italia -
+                        Via
                         Piazzale Aldo Moro 5
-                        00185 - Roma , RM , Italy  - Italia.</p>
+                        00185 - Roma , RM , Italy - Italia.</p>
                     <hr>
 
                     <h2>7. Comunicazione e diffusione dei dati</h2>
@@ -204,7 +208,7 @@
                     <hr>
 
                     <h2>11. Informazioni di contatto</h2>
-                    <p>Green Vechicle Demand S.p.A., con sede in  Piazzale Aldo Moro 5
+                    <p>Green Vechicle Demand S.p.A., con sede in Piazzale Aldo Moro 5
                         00185 - Roma , RM , Italy, è il Titolare/Responsabile
                         dei suoi dati personali. In generale qualora desideri contattarci o ricevere maggiori
                         informazioni sull’elaborazione dei dati, compresa una lista aggiornata dei soggetti ai quali i
@@ -218,33 +222,39 @@
         </div>
     </main>
 
-<!-- Footer -->
+    <!-- Footer -->
 
-<footer>
-    Green Vehicle Demand | Piazzale Aldo Moro 5
-    00185 - Roma, ITALIA | C.F. GVD45643298 | P.Iva 3342165789 <br>
-    <a class="trans-color-text"
-        href="mailto:greenvehicledemand@outlook.it?subject=Mail_dal_sito_web">greenvehicledemand@outlook.it</a> |
-    <span itemprop="telephone">+39 320 98
-        74 562</span>
-    <br><a target="_blank" href="about-us/about-us.html">About us</a> | <a target="_blank" href="privacy.html"> privacy</a> | <a target="_blank" href="incentivi/faq.html">
-        FAQ</a>
+    <footer>
+        Green Vehicle Demand | Piazzale Aldo Moro 5
+        00185 - Roma, ITALIA | C.F. GVD45643298 | P.Iva 3342165789 <br>
+        <a class="trans-color-text"
+            href="mailto:greenvehicledemand@outlook.it?subject=Mail_dal_sito_web">greenvehicledemand@outlook.it</a> |
+        <span itemprop="telephone">+39 320 98
+            74 562</span>
+        <br><a target="_blank" href="about-us/about-us.html">About us</a> | <a target="_blank" href="privacy.html">
+            privacy</a> | <a target="_blank" href="incentivi/faq.html">
+            FAQ</a>
 
-    <div class="social-cont">
-        <ul class="social-list">
-            <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100081637218993"><img
-                        src="immagini/facebook.png" title="facebook" alt="Facebook icon"></a></li>
-            <li><a target="_blank" href="https://www.instagram.com/greenvehicledemand/"><img
-                        src="immagini/instagram.png" title="Instagram" alt="Instagram icon"></a></li>
-            <li><a target="_blank" href="https://twitter.com/DemandGreen"><img src="immagini/twitter.png"
-                        title="twitter" alt="twitter icon"></a></li>
-        </ul>
-        <div class="floatstop"></div>
-    </div>
-    <span class="copyright">
-        <a target="_blank" href="index.html"><img width="40" src="immagini/logo.png" title="creators"></a>
-          Copyright &copy; Progetto Linguaggi e tecnologie per il web 2022
+        <div class="social-cont">
+            <ul class="social-list">
+                <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100081637218993"><img
+                            src="immagini/facebook.png" title="facebook" alt="Facebook icon"></a></li>
+                <li><a target="_blank" href="https://www.instagram.com/greenvehicledemand/"><img
+                            src="immagini/instagram.png" title="Instagram" alt="Instagram icon"></a></li>
+                <li><a target="_blank" href="https://twitter.com/DemandGreen"><img src="immagini/twitter.png"
+                            title="twitter" alt="twitter icon"></a></li>
+            </ul>
+            <div class="floatstop"></div>
+        </div>
+        <span class="copyright">
+            <a target="_blank" href="index.html"><img width="40" src="immagini/logo.png" title="creators"></a>
+            Copyright &copy; Progetto Linguaggi e tecnologie per il web 2022
             Pilla-Pascucci-Cutroni</span>
-</footer>
+    </footer>
+
+    <div>
+        <script src="/news/app_news.js" type="application/javascript"></script>
+    </div>
+</body>
 
 </html>
