social personali finiti

--- a/about-us/about-us.html
+++ b/about-us/about-us.html
@@ -81,9 +81,8 @@
                 <h4 class="title">Studente</h4>
               </div>
               <ul class="social">
-                <li><a href="" aria-hidden="true"><img src="/about-us/icons/facebook.png" alt=""></a></li>
-                <li><a href="" aria-hidden="true"><img src="/about-us/icons/twitter.png" alt=""></a></li>
-                <li><a href="" aria-hidden="true"><img src="/about-us/icons/instagram.png" alt=""></a></li>
+                <li><a href="https://www.facebook.com/giuseppe.pilla.7" aria-hidden="true"><img src="/about-us/icons/facebook.png" alt=""></a></li>
+                <li><a href="https://www.instagram.com/gius_vinsmoke/" aria-hidden="true"><img src="/about-us/icons/instagram.png" alt=""></a></li>
               </ul>
             </div>
           </div>
