patch stile contattaci

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="incentivi/incentivi-style.css">
+    <link rel="stylesheet" href="css/contattaci.css">
     <script src="bootstrap.min.js" type="application/javascript"></script>
     <script src="https://unpkg.com/vue@3"></script>
 </head>
