--- a/index.html
+++ b/index.html
@@ -121,17 +121,17 @@
                         <div class="screen-body-item">
                             <div class="app-form">
                                 <div class="app-form-group">
-                                    <input type="text" class="app-form-control" name="nome" placeholder="nome" required>
+                                    <input type="text" class="app-form-control input" name="nome" placeholder="nome" required>
                                 </div>
                                 <div class="app-form-group">
-                                    <input type="email" class="app-form-control" name="email" placeholder="email"
+                                    <input type="email" class="app-form-control input" name="email" placeholder="email"
                                         pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
                                 </div>
                                 <div class="app-form-group">
-                                    <input type="text" class="app-form-control" name="telefono" placeholder="telefono">
+                                    <input type="text" class="app-form-control input" name="telefono" placeholder="telefono">
                                 </div>
                                 <div class="app-form-group message">
-                                    <input class="app-form-control" name="messaggio" placeholder="messaggio" required>
+                                    <input class="app-form-control input" name="messaggio" placeholder="messaggio" required>
                                 </div>
                                 <div>
                                     <input type="checkbox" class="checkbox" name="privacyCheck" id="privacyCheck"
@@ -141,8 +141,8 @@
                                             target="_blank">Termini e condizioni</a></label><br>
                                 </div>
                                 <div class="app-form-group buttons">
-                                    <button type="reset" class="app-form-button">Cancella</button>
-                                    <button type="submit" class="app-form-button" name="invia">Invia</button>
+                                    <button type="reset" class="app-form-button button">Cancella</button>
+                                    <button type="submit" class="app-form-button button" name="invia">Invia</button>
                                 </div>
                             </div>
                         </div>
