piccola rettifica formale

--- a/privacy.html
+++ b/privacy.html
@@ -213,7 +213,7 @@
                         dei suoi dati personali. In generale qualora desideri contattarci o ricevere maggiori
                         informazioni sull’elaborazione dei dati, compresa una lista aggiornata dei soggetti ai quali i
                         dati possono essere comunicati e che sono preposti all'elaborazione dei dati è pregato di
-                        scrivere all'indirizzo mail info@greenvehicledemand.it.</p>
+                        scrivere all'indirizzo mail greenvehicledemand@outlook.it.</p>
                     <hr>
 
 
